HBASE-1916 FindBugs and javadoc warnings cleanup
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@826569 13f79535-47bb-0310-9956-ffa450edef68